--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
  */
 
 html {
+  box-sizing: border-box;
+  height: 100%;
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -21,7 +23,14 @@ html {
  */
 
 body {
+  height: 100%;
   margin: 0;
+  overflow-x: auto;
+  overflow-y: scroll;
+}
+
+#root {
+  height: 100%;
 }
 
 /**
