--- a/src/views/Artist/components/ArtistContent/ArtistContent.scss
+++ b/src/views/Artist/components/ArtistContent/ArtistContent.scss
@@ -52,11 +52,15 @@
     p {
         color: #fff;
         line-height: 2rem;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         font-weight: 600;
         @media (max-width: 600px) {
             font-size: 1rem;
         }
+    }
+
+    div {
+        text-align: left;
     }
 }
 
