--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -239,7 +239,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
+    padding: 4rem 2rem;
 }
 
 .honorable-mentions h1 {
